--- a/1.Code/Simualator/Project/GnssIns-VDR.vcxproj.filters
+++ b/1.Code/Simualator/Project/GnssIns-VDR.vcxproj.filters
@@ -27,11 +27,11 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="..\Src\Main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="..\Src\CoordTrans.cpp">
-      <Filter>源文件\Utils</Filter>
+    <ClCompile Include="..\Src\Mat.cpp">
+      <Filter>源文件\Math</Filter>
     </ClCompile>
     <ClCompile Include="..\Src\Location.cpp">
       <Filter>源文件\Location</Filter>
@@ -39,34 +39,16 @@
     <ClCompile Include="..\Src\Kalman.cpp">
       <Filter>源文件\Location</Filter>
     </ClCompile>
-    <ClCompile Include="..\Src\AHRS.cpp">
-      <Filter>源文件\Ins</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Src\Quaternion.cpp">
-      <Filter>源文件\Math</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Src\Matrix.cpp">
-      <Filter>源文件\Math</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Src\KmlSupport.cpp">
+    <ClCompile Include="..\Src\Utils.cpp">
       <Filter>源文件\Utils</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Src\Detector.cpp">
-      <Filter>源文件\Ins</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Src\Interface.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Src\Pedometer.cpp">
-      <Filter>源文件\Ins</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Src\DirectionEstimator.cpp">
-      <Filter>源文件\Ins</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Src\CoordTrans.h">
-      <Filter>源文件\Utils</Filter>
+    <ClInclude Include="..\Src\VDRBase.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Src\Mat.h">
+      <Filter>源文件\Math</Filter>
     </ClInclude>
     <ClInclude Include="..\Src\Location.h">
       <Filter>源文件\Location</Filter>
@@ -74,32 +56,8 @@
     <ClInclude Include="..\Src\Kalman.h">
       <Filter>源文件\Location</Filter>
     </ClInclude>
-    <ClInclude Include="..\Src\VDRBase.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Src\AHRS.h">
-      <Filter>源文件\Ins</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Src\Quaternion.h">
-      <Filter>源文件\Math</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Src\Matrix.h">
-      <Filter>源文件\Math</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Src\KmlSupport.h">
+    <ClInclude Include="..\Src\Utils.h">
       <Filter>源文件\Utils</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Src\Detector.h">
-      <Filter>源文件\Ins</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Src\Interface.h">
-      <Filter>源文件</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Src\Pedometer.h">
-      <Filter>源文件\Ins</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Src\DirectionEstimator.h">
-      <Filter>源文件\Ins</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
